html pages setup, index.html ready to copy to other .html

--- a/html/draft.html
+++ b/html/draft.html
@@ -4,51 +4,79 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Alexandre KELIFA</title>
 </head>
 
-<header>
-    <section class="introduction">
-        <h1>Alexandre KELIFA</h1>
-        <span>
-            <a href="image/Photo_CV_Pull_vert_Fond vert.jpg" style="width:500px" target="blank"><img
-                    src="image/Photo_CV_Pull_Noir.jpg" id="photo" style="width:100px" alt="portrait d'Alexandre Kelifa"
-                    title="Cliquez pour me voir en grand!"></a>
-        </span>
-        <span id=contact> 43 ans</br>
-            45, rue Saint Dominique,</br>
-            44770 Préfailles</br>
-            06 30 91 90 54</br>
-            alexandre.kelifa@gmail.com</br>
-            Nantes / St Nazaire</br>
-        </span>
-    </section>
-    <section>
-        <h2 class="under">A propos de moi :</h2>
-        <p>Technicien autonome, minutieux et polyvalent.</br>
-            Expériences de suivi et de coordination de chantiers brefs et multiples.</br>
-            Habitué à réagir aux aléas intempestifs.</br>
-            19 ans d'expérience : des compétences transverses au service de vos projets.</br>
-        </p>
-    </section>
-</header>
-
 <body>
+    <nav class="nav">
+        <h2 class="title">Navigation</h2>
+        <ul class="nav-links">
+            <li class="nav-item" id="home" >
+                <a class="nav-item-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item-link" href="#">Web developpment</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item-link" href="#">Mobile Network</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item-link" href="#">Electricity</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item-link" href="#">Photography</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item-link" href="#">About me</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item-link" href="#">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <header>
+        <section class="introduction">
+            <h1>Alexandre KELIFA</h1>
+                <a href="../image/Photo_CV_Pull_vert_Fond vert.jpg" style="width:500px" target="blank">
+                    <img
+                        src="../image/Photo_CV_Pull_Noir.jpg" id="photo" style="width:100px" alt="portrait d'Alexandre Kelifa"
+                        title="Cliquez pour me voir en grand!">
+                </a>
+            <span id="contact"> 43 ans<br>
+                45, rue Saint Dominique,<br>
+                44770 Préfailles<br>
+                06 30 91 90 54<br>
+                alexandre.kelifa@gmail.com<br>
+                Nantes / St Nazaire<br>
+            </span>
+        </section>
+        <section>
+            <h2 class="under">A propos de moi :</h2>
+            <p>Technicien autonome, minutieux et polyvalent.<br>
+                Expériences de suivi et de coordination de chantiers brefs et multiples.<br>
+                Habitué à réagir aux aléas intempestifs.<br>
+                19 ans d'expérience : des compétences transverses au service de vos projets.<br>
+            </p>
+        </section>
+    </header>
     <aside class="abilities">
         <section>
             <ul>
-                <h2>Compétences :</h2>
-                <li>
-                    <h3>Savoir être
-                </li>
-                </h3>
-                <ul>
-                    <li>Adaptabilité</li>
-                    <li>curiosité</li>
-                    <li>réactivité</li>
-                    <li>rigueur</li>
-                </ul>
+                <h2>
+                    Compétences :
+                </h2>
+                        <h3>
+                            Savoir être
+                        </h3>
+
+                    <ul>
+                        <li>Adaptabilité</li>
+                        <li>curiosité</li>
+                        <li>réactivité</li>
+                        <li>rigueur</li>
+                    </ul>
                 <li>
                     <h3>Coordination, planification
                 </li>
